Update resume content and formatting

--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@
 
 % ================== SETTINGS ==================
 \setstretch{1.15}
-\setlist[itemize]{leftmargin=*, noitemsep, topsep=2pt}
+\setlist[itemize]{leftmargin=*, noitemsep, topsep=3pt}
 
 \hypersetup{
   colorlinks=true,
@@ -47,23 +47,24 @@
 % ================== PROFILE ==================
 \section*{Profil Singkat}
 Backend Developer dengan pengalaman lebih dari 5 tahun dalam pengembangan dan pemeliharaan aplikasi web.
-Terbiasa membangun aplikasi dari awal, menambahkan fitur baru, serta menganalisis dan menyelesaikan permasalahan pada sistem yang sudah berjalan.
+Terbiasa membangun aplikasi dari awal, menambahkan fitur baru, memperbaiki bug, serta menganalisis dan menyelesaikan permasalahan pada sistem yang sudah berjalan.
 Berpengalaman menggunakan Laravel dan Yii2, serta mendukung kebutuhan backend untuk aplikasi mobile sesuai kebutuhan proyek.
 
 % ================== EXPERIENCE ==================
 \section*{Pengalaman Kerja}
 
-\textbf{Programmer} \hfill \textit{Juni 2020 -- Sekarang}\\
+\textbf{Backend Developer} \hfill \textit{Juni 2020 -- Sekarang}\\
 \textit{CV Putra Purnama Indonesia}
 \begin{itemize}
-  \item Mengembangkan dan memelihara aplikasi web berbasis Laravel dan Yii2, serta mendukung kebutuhan backend untuk aplikasi mobile.
-  \item Menambahkan dan menyesuaikan fitur aplikasi berdasarkan kebutuhan pengguna dan perubahan proses bisnis.
+  \item Mengembangkan dan memelihara aplikasi web berbasis Laravel dan Yii2.
+  \item Terlibat dalam pengembangan aplikasi dari tahap awal hingga implementasi produksi.
+  \item Menambahkan dan menyesuaikan fitur berdasarkan kebutuhan pengguna dan proses bisnis.
   \item Menganalisis, menelusuri, dan memperbaiki bug untuk menjaga stabilitas dan keandalan sistem.
   \item Menangani permasalahan teknis pada sistem yang sudah berjalan serta melakukan penyesuaian logika aplikasi.
-  \item Terlibat dalam pengembangan aplikasi dari tahap awal hingga implementasi produksi.
-  \item Menyusun dan menyesuaikan endpoint API sesuai kebutuhan frontend dan aplikasi mobile.
-  \item Membuat dan menggunakan Postman collection untuk menguji endpoint API selama proses pengembangan.
-  \item Mengelola database MySQL, termasuk relasi tabel dan optimasi query.
+  \item Mengembangkan dan menyesuaikan API backend sesuai kebutuhan aplikasi.
+  \item Mengimplementasikan autentikasi API (termasuk JWT) pada aplikasi tertentu.
+  \item Menguji API menggunakan Postman (request dan collection).
+  \item Mengelola database MySQL, termasuk relasi tabel dan optimasi query dasar.
   \item Menangani deployment aplikasi ke VPS dan shared hosting.
 \end{itemize}
 
@@ -72,17 +73,17 @@ Berpengalaman menggunakan Laravel dan Yii2, serta mendukung kebutuhan backend un
 \begin{itemize}
   \item Mengembangkan aplikasi web sederhana menggunakan PHP dan MySQL.
   \item Membuat fitur CRUD dan antarmuka dasar aplikasi.
-  \item Membantu analisis permasalahan sederhana serta perbaikan bug pada aplikasi.
+  \item Membantu analisis permasalahan sederhana serta perbaikan bug.
 \end{itemize}
 
 % ================== PROJECTS ==================
 \section*{Pengalaman Proyek}
 
-\textbf{Sistem Pemerintahan Berbasis Web}
+\textbf{Sistem Internal Pemerintahan dan BUMN}
 \begin{itemize}
-  \item Terlibat dalam pengembangan dan pemeliharaan berbagai sistem internal instansi pemerintah.
-  \item Mengerjakan modul Manajemen SDM, Kinerja Pegawai, SOP Digital, serta sistem pendukung administrasi.
-  \item Fokus pada pengembangan fitur baru, analisis permasalahan, dan menjaga stabilitas sistem.
+  \item Terlibat dalam pengembangan dan pemeliharaan berbagai sistem internal instansi pemerintah dan BUMN.
+  \item Mengerjakan modul manajemen SDM, kinerja pegawai, SOP digital, serta sistem pendukung administrasi.
+  \item Berkontribusi pada pengembangan fitur baru, analisis permasalahan, serta menjaga stabilitas sistem.
 \end{itemize}
 
 % ================== SKILLS ==================
@@ -98,11 +99,11 @@ Berpengalaman menggunakan Laravel dan Yii2, serta mendukung kebutuhan backend un
 \begin{itemize}
   \item MySQL
   \item Git dan GitHub
-  \item API testing dasar menggunakan Postman (request dan collection)
-  \item Deployment VPS dan shared hosting
+  \item API testing menggunakan Postman (request dan collection)
+  \item Deployment aplikasi (VPS Ubuntu, Apache, dan Shared Hosting)
 \end{itemize}
 
-\textbf{Pendukung}
+\textbf{Keahlian Tambahan}
 \begin{itemize}
   \item Flutter (digunakan pada proyek tertentu)
   \item Next.js (basic)
