--- a/main.tex
+++ b/main.tex
@@ -47,7 +47,7 @@
 % ================== PROFILE ==================
 \section*{Profil Singkat}
 Backend Developer dengan pengalaman lebih dari 5 tahun dalam pengembangan dan pemeliharaan aplikasi web.
-Terbiasa membangun aplikasi dari awal, menambahkan fitur baru, memperbaiki bug, serta menganalisis dan menyelesaikan permasalahan pada sistem yang sudah berjalan.
+Berpengalaman membangun aplikasi dari awal, menambahkan fitur, memperbaiki bug, serta menganalisis dan menyelesaikan permasalahan pada sistem yang sudah berjalan.
 Berpengalaman menggunakan Laravel dan Yii2, serta mendukung kebutuhan backend untuk aplikasi mobile sesuai kebutuhan proyek.
 
 % ================== EXPERIENCE ==================
