Update content profil singkat

--- a/main.tex
+++ b/main.tex
@@ -48,7 +48,7 @@
 \section*{Profil Singkat}
 Backend Developer dengan pengalaman lebih dari 5 tahun dalam pengembangan dan pemeliharaan aplikasi web.
 Berpengalaman membangun aplikasi dari awal, menambahkan fitur, memperbaiki bug, serta menganalisis dan menyelesaikan permasalahan pada sistem yang sudah berjalan.
-Berpengalaman menggunakan Laravel dan Yii2, serta mendukung kebutuhan backend untuk aplikasi mobile sesuai kebutuhan proyek.
+Menggunakan Laravel dan Yii2, serta mendukung kebutuhan backend untuk aplikasi mobile sesuai kebutuhan proyek.
 
 % ================== EXPERIENCE ==================
 \section*{Pengalaman Kerja}
