docs: update CV

--- a/main.tex
+++ b/main.tex
@@ -34,7 +34,7 @@
 \begin{center}
   {\LARGE \textbf{FARIC FATHIAN HIDAYAH}}\\
   \vspace{4pt}
-  Backend Developer\\
+  Fullstack Developer (Backend-Oriented)\\
   \vspace{6pt}
   Bandung, Jawa Barat \,|\, 
   \href{mailto:faricfathianhidayah@gmail.com}{faricfathianhidayah@gmail.com} \,|\, 
@@ -46,68 +46,78 @@
 
 % ================== PROFILE ==================
 \section*{Profil Singkat}
-Backend Developer dengan pengalaman lebih dari 5 tahun dalam pengembangan dan pemeliharaan aplikasi web.
-Berpengalaman membangun aplikasi dari awal, menambahkan fitur, memperbaiki bug, serta menganalisis dan menyelesaikan permasalahan pada sistem yang sudah berjalan.
-Menggunakan Laravel dan Yii2, serta mendukung kebutuhan backend untuk aplikasi mobile sesuai kebutuhan proyek.
+Fullstack Developer berorientasi backend dengan pengalaman lebih dari 5 tahun dalam pengembangan aplikasi web produksi. 
+Memiliki keahlian dalam perancangan arsitektur backend, pengembangan REST API, serta desain dan optimasi database untuk sistem berskala nyata. 
+Terbiasa menangani seluruh siklus pengembangan aplikasi mulai dari analisis kebutuhan hingga deployment dan pemeliharaan sistem. 
+Berpengalaman menangani proyek institusi pemerintah, BUMN, dan proyek freelance melalui komunikasi teknis tertulis dengan klien internasional.
 
 % ================== EXPERIENCE ==================
 \section*{Pengalaman Kerja}
 
-\textbf{Backend Developer} \hfill \textit{Juni 2020 -- Sekarang}\\
+\textbf{Fullstack Developer (Backend-Oriented)} \hfill \textit{Juni 2020 -- Sekarang}\\
 \textit{CV Putra Purnama Indonesia}
 \begin{itemize}
-  \item Mengembangkan dan memelihara aplikasi web berbasis Laravel dan Yii2.
-  \item Terlibat dalam pengembangan aplikasi dari tahap awal hingga implementasi produksi.
-  \item Menambahkan dan menyesuaikan fitur berdasarkan kebutuhan pengguna dan proses bisnis.
-  \item Menganalisis, menelusuri, dan memperbaiki bug untuk menjaga stabilitas dan keandalan sistem.
-  \item Menangani permasalahan teknis pada sistem yang sudah berjalan serta melakukan penyesuaian logika aplikasi.
-  \item Mengembangkan dan menyesuaikan API backend sesuai kebutuhan aplikasi.
-  \item Mengimplementasikan autentikasi API (termasuk JWT) pada aplikasi tertentu.
-  \item Menguji API menggunakan Postman (request dan collection).
-  \item Mengelola database MySQL, termasuk relasi tabel dan optimasi query dasar.
-  \item Menangani deployment aplikasi ke VPS dan shared hosting.
+  \item Mengembangkan dan memelihara aplikasi web produksi berbasis Laravel dan Yii2 dengan fokus pada backend dan implementasi logika bisnis.
+  \item Membangun dan mengelola REST API untuk integrasi aplikasi web dan mobile.
+  \item Menerjemahkan kebutuhan sistem menjadi solusi teknis yang stabil dan mudah dipelihara.
+  \item Menambahkan fitur baru serta melakukan perbaikan dan peningkatan performa aplikasi.
+  \item Mendesain struktur database MySQL serta melakukan optimasi query untuk performa tinggi.
+  \item Melakukan analisis dan debugging untuk menjaga stabilitas sistem produksi.
+  \item Mengimplementasikan autentikasi API termasuk JWT.
+  \item Menguji endpoint API menggunakan Postman dan menyusun dokumentasi internal.
+  \item Melakukan deployment dan konfigurasi aplikasi pada VPS Ubuntu dan shared hosting.
+  \item Berkolaborasi dalam integrasi frontend sebagai bagian dari pengembangan fullstack.
+\end{itemize}
+
+\textbf{Freelance Fullstack Developer (Laravel, Part-time)} \hfill \textit{Jul 2024 -- Jun 2025}\\
+\textit{Client Projects via Fiverr Platform}
+\begin{itemize}
+  \item Mengembangkan aplikasi web berbasis Laravel dari tahap perancangan hingga implementasi produksi.
+  \item Membangun sistem CRUD dan dashboard admin menggunakan AdminLTE sesuai kebutuhan klien.
+  \item Mengimplementasikan autentikasi pengguna dan kontrol akses berbasis peran.
+  \item Melakukan penyesuaian fitur lanjutan berdasarkan permintaan klien pasca delivery.
+  \item Memberikan pemeliharaan aplikasi, perbaikan bug, dan peningkatan performa sistem.
+  \item Menangani proyek lanjutan dari klien yang sama untuk pengembangan fitur tambahan.
+  \item Berkomunikasi dengan klien internasional secara tertulis untuk analisis kebutuhan dan penyampaian solusi teknis.
 \end{itemize}
 
 \textbf{PKL / Praktik Kerja Lapangan – Programmer} \hfill \textit{Okt 2019 -- Nov 2019}\\
 \textit{Solusi Teknis Bandung}
 \begin{itemize}
   \item Mengembangkan aplikasi web sederhana menggunakan PHP dan MySQL.
-  \item Membuat fitur CRUD dan antarmuka dasar aplikasi.
-  \item Membantu analisis permasalahan sederhana serta perbaikan bug.
-\end{itemize}
-
-% ================== PROJECTS ==================
-\section*{Pengalaman Proyek}
-
-\textbf{Sistem Internal Pemerintahan dan BUMN}
-\begin{itemize}
-  \item Terlibat dalam pengembangan dan pemeliharaan berbagai sistem internal instansi pemerintah dan BUMN.
-  \item Mengerjakan modul manajemen SDM, kinerja pegawai, SOP digital, serta sistem pendukung administrasi.
-  \item Berkontribusi pada pengembangan fitur baru, analisis permasalahan, serta menjaga stabilitas sistem.
+  \item Mengimplementasikan fitur CRUD dan antarmuka aplikasi.
+  \item Membantu analisis permasalahan teknis dan perbaikan bug.
 \end{itemize}
 
 % ================== SKILLS ==================
 \section*{Keahlian Teknis}
 
-\textbf{Backend}
+\textbf{Pengembangan Backend}
 \begin{itemize}
   \item PHP (Laravel, Yii2)
-  \item Pengembangan dan pemeliharaan aplikasi backend
+  \item Pengembangan REST API
+  \item Implementasi logika bisnis
+  \item Perancangan arsitektur backend
+\end{itemize}
+
+\textbf{Integrasi Frontend}
+\begin{itemize}
+  \item HTML, CSS, JavaScript untuk integrasi aplikasi
+  \item Next.js (digunakan untuk integrasi frontend)
+  \item Flutter (digunakan pada proyek tertentu)
 \end{itemize}
 
 \textbf{Database \& Tools}
 \begin{itemize}
   \item MySQL
   \item Git dan GitHub
-  \item API testing menggunakan Postman (request dan collection)
-  \item Deployment aplikasi (VPS Ubuntu, Apache, dan Shared Hosting)
+  \item Pengujian API menggunakan Postman
+  \item Deployment aplikasi pada VPS Ubuntu, Apache, dan shared hosting
 \end{itemize}
 
-\textbf{Keahlian Tambahan}
+\textbf{Tambahan}
 \begin{itemize}
-  \item Flutter (digunakan pada proyek tertentu)
-  \item Next.js (basic)
-  \item Kotlin (basic)
+  \item Kotlin (pemahaman dasar)
 \end{itemize}
 
 % ================== EDUCATION ==================
