refine portfolio header layout and content

--- a/main.tex
+++ b/main.tex
@@ -36,10 +36,9 @@
   \vspace{4pt}
   Fullstack Developer (Backend-Oriented)\\
   \vspace{6pt}
-  Bandung, Jawa Barat \,|\, 
-  \href{mailto:faricfathianhidayah@gmail.com}{faricfathianhidayah@gmail.com} \,|\, 
-  +62 881-7749-791 \,|\, 
-  \href{https://github.com/faricfh}{github.com/faricfh}
+  Bandung, Jawa Barat \,|\, \href{mailto:faricfathianhidayah@gmail.com}{faricfathianhidayah@gmail.com} \,|\, +62 881-7749-791 \\
+  \vspace{2pt}
+  \href{https://github.com/faricfh}{github.com/faricfh} \,|\, \href{https://portofolio-faricfh.vercel.app}{portofolio-faricfh.vercel.app}
 \end{center}
 
 \vspace{8pt}
