--- a/main.tex
+++ b/main.tex
@@ -36,98 +36,109 @@
   \vspace{4pt}
   Fullstack Developer (Backend-Oriented)\\
   \vspace{6pt}
-  Bandung, Jawa Barat \,|\, \href{mailto:faricfathianhidayah@gmail.com}{faricfathianhidayah@gmail.com} \,|\, +62 881-7749-791 \\
-  \vspace{2pt}
-  \href{https://github.com/faricfh}{github.com/faricfh} \,|\, \href{https://portofolio-faricfh.vercel.app}{portofolio-faricfh.vercel.app}
+  Bandung, Jawa Barat \,|\, 
+  \href{mailto:faricfathianhidayah@gmail.com}{faricfathianhidayah@gmail.com} \,|\, 
+  +62 881-7749-791 \\
+  \href{https://github.com/faricfh}{github.com/faricfh} \,|\, 
+  \href{https://portofolio-faricfh.vercel.app}{portofolio-faricfh.vercel.app}
 \end{center}
 
-\vspace{8pt}
+\vspace{6pt}
 
 % ================== PROFILE ==================
 \section*{Profil Singkat}
-Fullstack Developer berorientasi backend dengan pengalaman lebih dari 5 tahun dalam pengembangan aplikasi web produksi. 
-Memiliki keahlian dalam perancangan arsitektur backend, pengembangan REST API, serta desain dan optimasi database untuk sistem berskala nyata. 
-Terbiasa menangani seluruh siklus pengembangan aplikasi mulai dari analisis kebutuhan hingga deployment dan pemeliharaan sistem. 
-Berpengalaman menangani proyek institusi pemerintah, BUMN, dan proyek freelance melalui komunikasi teknis tertulis dengan klien internasional.
+Fullstack Developer berorientasi backend dengan pengalaman 5+ tahun membangun aplikasi web produksi 
+untuk institusi pemerintah, BUMN, dan proyek freelance internasional. Berpengalaman dalam desain 
+arsitektur backend, pengembangan REST API, optimasi database, serta deployment sistem skala nyata. 
+Terbiasa menangani seluruh tahapan pengembangan aplikasi dari analisis kebutuhan hingga stabilisasi 
+sistem produksi.
 
 % ================== EXPERIENCE ==================
 \section*{Pengalaman Kerja}
 
-\textbf{Fullstack Developer (Backend-Oriented)} \hfill \textit{Juni 2020 -- Sekarang}\\
+\textbf{Fullstack Developer (Backend-Oriented)} \hfill \textit{Jun 2020 -- Sekarang}\\
 \textit{CV Putra Purnama Indonesia}
 \begin{itemize}
-  \item Mengembangkan dan memelihara aplikasi web produksi berbasis Laravel dan Yii2 dengan fokus pada backend dan implementasi logika bisnis.
-  \item Membangun dan mengelola REST API untuk integrasi aplikasi web dan mobile.
-  \item Menerjemahkan kebutuhan sistem menjadi solusi teknis yang stabil dan mudah dipelihara.
-  \item Menambahkan fitur baru serta melakukan perbaikan dan peningkatan performa aplikasi.
-  \item Mendesain struktur database MySQL serta melakukan optimasi query untuk performa tinggi.
-  \item Melakukan analisis dan debugging untuk menjaga stabilitas sistem produksi.
-  \item Mengimplementasikan autentikasi API termasuk JWT.
-  \item Menguji endpoint API menggunakan Postman dan menyusun dokumentasi internal.
-  \item Melakukan deployment dan konfigurasi aplikasi pada VPS Ubuntu dan shared hosting.
-  \item Berkolaborasi dalam integrasi frontend sebagai bagian dari pengembangan fullstack.
+  \item Mengembangkan dan memelihara aplikasi web produksi berbasis Laravel dan Yii2 dengan fokus backend dan implementasi logika bisnis.
+  \item Mendesain dan membangun REST API untuk integrasi aplikasi web dan mobile.
+  \item Implementasi autentikasi API termasuk JWT dan manajemen akses pengguna.
+  \item Perancangan struktur database MySQL dan optimasi query untuk performa tinggi.
+  \item Analisis bug, debugging, dan stabilisasi sistem produksi.
+  \item Penambahan fitur baru serta peningkatan performa aplikasi.
+  \item Pengujian endpoint menggunakan Postman dan penyusunan dokumentasi internal.
+  \item Deployment dan konfigurasi aplikasi pada VPS Ubuntu dan shared hosting.
+  \item Kolaborasi integrasi frontend sebagai bagian dari pengembangan fullstack.
 \end{itemize}
 
-\textbf{Freelance Fullstack Developer (Laravel, Part-time)} \hfill \textit{Jul 2024 -- Jun 2025}\\
-\textit{Client Projects via Fiverr Platform}
+\textbf{Freelance Fullstack Developer (Part-time)} \hfill \textit{Jul 2024 -- Jun 2025}\\
+\textit{Client Projects via Fiverr}
 \begin{itemize}
-  \item Mengembangkan aplikasi web berbasis Laravel dari tahap perancangan hingga implementasi produksi.
-  \item Membangun sistem CRUD dan dashboard admin menggunakan AdminLTE sesuai kebutuhan klien.
-  \item Mengimplementasikan autentikasi pengguna dan kontrol akses berbasis peran.
-  \item Melakukan penyesuaian fitur lanjutan berdasarkan permintaan klien pasca delivery.
-  \item Memberikan pemeliharaan aplikasi, perbaikan bug, dan peningkatan performa sistem.
-  \item Menangani proyek lanjutan dari klien yang sama untuk pengembangan fitur tambahan.
-  \item Berkomunikasi dengan klien internasional secara tertulis untuk analisis kebutuhan dan penyampaian solusi teknis.
+  \item Mengembangkan aplikasi Laravel dari tahap perancangan hingga implementasi produksi.
+  \item Implementasi dashboard admin berbasis AdminLTE sesuai kebutuhan klien.
+  \item Sistem autentikasi dan kontrol akses berbasis peran.
+  \item Maintenance aplikasi, perbaikan bug, dan optimasi performa.
+  \item Pengembangan fitur lanjutan pasca delivery.
+  \item Komunikasi teknis tertulis dengan klien internasional untuk analisis kebutuhan.
 \end{itemize}
 
-\textbf{PKL / Praktik Kerja Lapangan – Programmer} \hfill \textit{Okt 2019 -- Nov 2019}\\
+\textbf{Programmer Intern (PKL)} \hfill \textit{Okt 2019 -- Nov 2019}\\
 \textit{Solusi Teknis Bandung}
 \begin{itemize}
-  \item Mengembangkan aplikasi web sederhana menggunakan PHP dan MySQL.
-  \item Mengimplementasikan fitur CRUD dan antarmuka aplikasi.
-  \item Membantu analisis permasalahan teknis dan perbaikan bug.
+  \item Pengembangan aplikasi web menggunakan PHP dan MySQL.
+  \item Implementasi fitur CRUD dan antarmuka aplikasi.
+  \item Analisis permasalahan teknis dan debugging.
 \end{itemize}
+
+% ================== PROJECTS ==================
+\section*{Proyek Utama}
+
+\textbf{Fazdecore — Platform Katalog Dekorasi} \hfill \textit{Fullstack Developer}
+\begin{itemize}
+  \item Platform katalog dekorasi dengan panel admin dan REST API produksi.
+  \item Integrasi frontend Next.js dengan backend Laravel.
+  \item Desain database dan optimasi performa query.
+  \item Tech: Laravel, Next.js, MySQL
+  \item \href{https://fazdecore.com/}{fazdecore.com}
+\end{itemize}
+
+\textbf{Sali Insurance Management System} \hfill \textit{Fullstack Developer}
+\begin{itemize}
+  \item Sistem manajemen polis asuransi dengan kontrol akses multi-user.
+  \item Arsitektur backend untuk operasional produksi skala organisasi.
+  \item Implementasi autentikasi dan pengelolaan data sensitif.
+  \item Tech: Laravel, MySQL
+  \item \href{https://imas.sali.co.ke/}{imas.sali.co.ke}
+\end{itemize}
+
+\textbf{SIKAP — Sistem Kehadiran Pegawai} \hfill \textit{Backend Developer}
+\begin{itemize}
+  \item Sistem presensi real-time untuk institusi pemerintah.
+  \item Backend dan desain database skala organisasi.
+  \item Stabilisasi sistem produksi dan debugging.
+  \item Tech: Yii2, MySQL
+\end{itemize}
+
+\textbf{DoList — Aplikasi Manajemen Tugas Mobile} \hfill \textit{Mobile Developer}
+\begin{itemize}
+  \item Aplikasi Flutter untuk manajemen tugas dengan arsitektur offline-first.
+  \item Penyimpanan dan pengolahan data lokal menggunakan Hive.
+  \item Implementasi notifikasi lokal dan manajemen jadwal tugas.
+  \item Tech: Flutter, Dart
+\end{itemize}
+
 
 % ================== SKILLS ==================
 \section*{Keahlian Teknis}
 
-\textbf{Pengembangan Backend}
-\begin{itemize}
-  \item PHP (Laravel, Yii2)
-  \item Pengembangan REST API
-  \item Implementasi logika bisnis
-  \item Perancangan arsitektur backend
-\end{itemize}
-
-\textbf{Integrasi Frontend}
-\begin{itemize}
-  \item HTML, CSS, JavaScript untuk integrasi aplikasi
-  \item Next.js (digunakan untuk integrasi frontend)
-  \item Flutter (digunakan pada proyek tertentu)
-\end{itemize}
-
-\textbf{Database \& Tools}
-\begin{itemize}
-  \item MySQL
-  \item Git dan GitHub
-  \item Pengujian API menggunakan Postman
-  \item Deployment aplikasi pada VPS Ubuntu, Apache, dan shared hosting
-\end{itemize}
-
-\textbf{Tambahan}
-\begin{itemize}
-  \item Kotlin (pemahaman dasar)
-\end{itemize}
+\textbf{Backend:} PHP (Laravel, Yii2), REST API, JWT Authentication \\
+\textbf{Frontend:} HTML, CSS, JavaScript, Next.js \\
+\textbf{Database:} MySQL \\
+\textbf{Tools \& Deployment:} Git/GitHub, Postman, Linux Server (Ubuntu), Apache, VPS Deployment \\
+\textbf{Tambahan:} Flutter, Kotlin (dasar)
 
 % ================== EDUCATION ==================
 \section*{Pendidikan}
 
-\textbf{SMK Assalaam Bandung} \hfill \textit{Juli 2017 -- Mei 2020}\\
-Rekayasa Perangkat Lunak (RPL)
-\begin{itemize}
-  \item Pengembangan aplikasi berbasis database.
-  \item Pengembangan web menggunakan HTML, CSS, PHP, dan Laravel.
-  \item Dasar pengembangan aplikasi mobile.
-\end{itemize}
+\textbf{SMK Assalaam Bandung} — Rekayasa Perangkat Lunak \hfill \textit{2017 -- 2020}
 
 \end{document}
