--- a/main.tex
+++ b/main.tex
@@ -48,10 +48,10 @@
 % ================== PROFILE ==================
 \section*{Profil Singkat}
 Fullstack Developer berorientasi backend dengan pengalaman 5+ tahun membangun aplikasi web produksi 
-untuk institusi pemerintah, BUMN, dan proyek freelance internasional. Berpengalaman dalam desain 
-arsitektur backend, pengembangan REST API, optimasi database, serta deployment sistem skala nyata. 
-Terbiasa menangani seluruh tahapan pengembangan aplikasi dari analisis kebutuhan hingga stabilisasi 
-sistem produksi.
+untuk institusi pemerintah, BUMN, dan proyek freelance internasional. Memiliki keahlian dalam desain 
+arsitektur backend, pengembangan REST API, optimasi database, serta deployment sistem berskala nyata, 
+serta berpengalaman menangani seluruh tahapan pengembangan aplikasi dari analisis kebutuhan hingga 
+stabilisasi sistem produksi.
 
 % ================== EXPERIENCE ==================
 \section*{Pengalaman Kerja}
@@ -64,7 +64,7 @@ sistem produksi.
   \item Implementasi autentikasi API termasuk JWT dan manajemen akses pengguna.
   \item Perancangan struktur database MySQL dan optimasi query untuk performa tinggi.
   \item Analisis bug, debugging, dan stabilisasi sistem produksi.
-  \item Penambahan fitur baru serta peningkatan performa aplikasi.
+  \item Menambahkan fitur baru serta meningkatkan performa aplikasi.
   \item Pengujian endpoint menggunakan Postman dan penyusunan dokumentasi internal.
   \item Deployment dan konfigurasi aplikasi pada VPS Ubuntu dan shared hosting.
   \item Kolaborasi integrasi frontend sebagai bagian dari pengembangan fullstack.
@@ -76,8 +76,8 @@ sistem produksi.
   \item Mengembangkan aplikasi Laravel dari tahap perancangan hingga implementasi produksi.
   \item Implementasi dashboard admin berbasis AdminLTE sesuai kebutuhan klien.
   \item Sistem autentikasi dan kontrol akses berbasis peran.
-  \item Maintenance aplikasi, perbaikan bug, dan optimasi performa.
-  \item Pengembangan fitur lanjutan pasca delivery.
+  \item Pemeliharaan aplikasi, perbaikan bug, dan optimasi performa.
+  \item Pengembangan fitur lanjutan setelah implementasi produksi.
   \item Komunikasi teknis tertulis dengan klien internasional untuk analisis kebutuhan.
 \end{itemize}
 
@@ -97,7 +97,7 @@ sistem produksi.
   \item Platform katalog dekorasi dengan panel admin dan REST API produksi.
   \item Integrasi frontend Next.js dengan backend Laravel.
   \item Desain database dan optimasi performa query.
-  \item Tech: Laravel, Next.js, MySQL
+  \item Teknologi: Laravel, Next.js, MySQL
   \item \href{https://fazdecore.com/}{fazdecore.com}
 \end{itemize}
 
@@ -106,7 +106,7 @@ sistem produksi.
   \item Sistem manajemen polis asuransi dengan kontrol akses multi-user.
   \item Arsitektur backend untuk operasional produksi skala organisasi.
   \item Implementasi autentikasi dan pengelolaan data sensitif.
-  \item Tech: Laravel, MySQL
+  \item Teknologi: Laravel, MySQL
   \item \href{https://imas.sali.co.ke/}{imas.sali.co.ke}
 \end{itemize}
 
@@ -115,7 +115,7 @@ sistem produksi.
   \item Sistem presensi real-time untuk institusi pemerintah.
   \item Backend dan desain database skala organisasi.
   \item Stabilisasi sistem produksi dan debugging.
-  \item Tech: Yii2, MySQL
+  \item Teknologi: Yii2, MySQL
 \end{itemize}
 
 \textbf{DoList — Aplikasi Manajemen Tugas Mobile} \hfill \textit{Mobile Developer}
@@ -123,7 +123,7 @@ sistem produksi.
   \item Aplikasi Flutter untuk manajemen tugas dengan arsitektur offline-first.
   \item Penyimpanan dan pengolahan data lokal menggunakan Hive.
   \item Implementasi notifikasi lokal dan manajemen jadwal tugas.
-  \item Tech: Flutter, Dart
+  \item Teknologi: Flutter, Dart
 \end{itemize}
 
 
@@ -133,7 +133,7 @@ sistem produksi.
 \textbf{Backend:} PHP (Laravel, Yii2), REST API, JWT Authentication \\
 \textbf{Frontend:} HTML, CSS, JavaScript, Next.js \\
 \textbf{Database:} MySQL \\
-\textbf{Tools \& Deployment:} Git/GitHub, Postman, Linux Server (Ubuntu), Apache, VPS Deployment \\
+\textbf{Tools \& Deployment:} Git, GitHub, Postman, Linux (Ubuntu), Apache, VPS Deployment \\
 \textbf{Tambahan:} Flutter, Kotlin (dasar)
 
 % ================== EDUCATION ==================
