--- a/main.tex
+++ b/main.tex
@@ -50,7 +50,7 @@
 Fullstack Developer berorientasi backend dengan pengalaman 5+ tahun membangun aplikasi web produksi 
 untuk institusi pemerintah, BUMN, dan proyek freelance internasional. Memiliki keahlian dalam desain 
 arsitektur backend, pengembangan REST API, optimasi database, serta deployment sistem berskala nyata, 
-serta berpengalaman menangani seluruh tahapan pengembangan aplikasi dari analisis kebutuhan hingga 
+dan berpengalaman menangani seluruh tahapan pengembangan aplikasi dari analisis kebutuhan hingga 
 stabilisasi sistem produksi.
 
 % ================== EXPERIENCE ==================
